# timelapse-maker

./: index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-windows.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
